Add a couple missing text fields
Add "staff responsible" to germination tests and "notes" to withdrawals.
